--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "js-tmsp",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Javascript TMSP libraries",
   "main": "index.js",
   "dependencies": {
     "protobufjs": "~5.0.1",
-    "js-wire": "0.0.2"
+    "js-wire": "~0.0.3"
   }
 }
