--- a/example/package.json
+++ b/example/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "js-tmsp-example",
+  "name": "js-abci-example",
   "version": "0.0.1",
-  "description": "Javascript TMSP example application",
+  "description": "Javascript ABCI example application",
   "main": "app.js",
   "dependencies": {
-    "js-tmsp": "0.0.9"
+    "js-abci": "0.0.9"
   }
 }
