Add easy way to run using npm scripts

--- a/example/package.json
+++ b/example/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "Javascript ABCI example application",
   "main": "app.js",
+  "scripts": {
+      "start": "npm install && node app.js"
+  },
   "dependencies": {
     "js-abci": "../"
   }
