--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "abci",
+  "name": "js-abci",
   "version": "7.0.0",
   "description": "Tendermint ABCI server",
   "main": "index.js",
