Revert "Update package.json"
This reverts commit ccb14bfeb7ddc80826947619943ee78a57c39e68.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@trivo/abci",
+  "name": "abci",
   "version": "7.0.1",
   "description": "Tendermint ABCI server",
   "main": "index.js",
